--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "@types/node": "^12.20.33",
     "@types/react": "^17.0.30",
     "@types/react-dom": "^17.0.9",
+    "axios": "^0.23.0",
+    "esbuild-wasm": "^0.13.8",
+    "localforage": "^1.10.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
