--- a/package.json
+++ b/package.json
@@ -4,18 +4,24 @@
   "private": true,
   "dependencies": {
     "@excalidraw/excalidraw": "^0.10.0",
+    "@monaco-editor/react": "^4.3.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "@types/jest": "^26.0.24",
     "@types/node": "^12.20.33",
+    "@types/prettier": "^2.4.1",
     "@types/react": "^17.0.30",
     "@types/react-dom": "^17.0.9",
+    "@types/react-resizable": "^1.7.4",
     "axios": "^0.23.0",
     "esbuild-wasm": "^0.13.8",
     "localforage": "^1.10.0",
+    "monaco-editor": "^0.29.1",
+    "prettier": "^2.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-resizable": "^3.0.4",
     "react-scripts": "4.0.3",
     "sass": "^1.43.2",
     "sass-loader": "^12.2.0",
