--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^17.0.30",
     "@types/react-dom": "^17.0.9",
     "@types/react-resizable": "^1.7.4",
+    "@uiw/react-md-editor": "^3.6.5",
     "axios": "^0.23.0",
     "esbuild-wasm": "^0.13.8",
     "localforage": "^1.10.0",
