--- a/package.json
+++ b/package.json
@@ -13,17 +13,22 @@
     "@types/prettier": "^2.4.1",
     "@types/react": "^17.0.30",
     "@types/react-dom": "^17.0.9",
+    "@types/react-redux": "^7.1.20",
     "@types/react-resizable": "^1.7.4",
     "@uiw/react-md-editor": "^3.6.5",
     "axios": "^0.23.0",
     "esbuild-wasm": "^0.13.8",
+    "immer": "^9.0.6",
     "localforage": "^1.10.0",
     "monaco-editor": "^0.29.1",
     "prettier": "^2.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.5",
     "react-resizable": "^3.0.4",
     "react-scripts": "4.0.3",
+    "redux": "^4.1.1",
+    "redux-thunk": "^2.3.0",
     "sass": "^1.43.2",
     "sass-loader": "^12.2.0",
     "typescript": "^4.4.4",
