--- a/package.json
+++ b/package.json
@@ -1,62 +1,69 @@
 {
-  "name": "nucleus",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@excalidraw/excalidraw": "^0.10.0",
-    "@fortawesome/fontawesome-free": "^5.15.4",
-    "@monaco-editor/react": "^4.3.1",
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^11.2.7",
-    "@testing-library/user-event": "^12.8.3",
-    "@types/jest": "^26.0.24",
-    "@types/node": "^12.20.33",
-    "@types/prettier": "^2.4.1",
-    "@types/react": "^17.0.30",
-    "@types/react-dom": "^17.0.9",
-    "@types/react-redux": "^7.1.20",
-    "@types/react-resizable": "^1.7.4",
-    "@uiw/react-md-editor": "^3.6.5",
-    "axios": "^0.23.0",
-    "esbuild-wasm": "^0.13.10",
-    "immer": "^9.0.6",
-    "localforage": "^1.10.0",
-    "monaco-editor": "^0.29.1",
-    "prettier": "^2.4.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-redux": "^7.2.5",
-    "react-resizable": "^3.0.4",
-    "react-scripts": "4.0.3",
-    "redux": "^4.1.1",
-    "redux-thunk": "^2.3.0",
-    "sass": "^1.43.2",
-    "sass-loader": "^12.2.0",
-    "typescript": "^4.4.4",
-    "web-vitals": "^1.1.2"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+    "name": "nucleus",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies": {
+        "@craco/craco": "^6.4.0",
+        "@excalidraw/excalidraw": "^0.10.0",
+        "@fortawesome/fontawesome-free": "^5.15.4",
+        "@monaco-editor/react": "^4.3.1",
+        "@testing-library/jest-dom": "^5.14.1",
+        "@testing-library/react": "^11.2.7",
+        "@testing-library/user-event": "^12.8.3",
+        "@types/jest": "^26.0.24",
+        "@types/node": "^12.20.33",
+        "@types/prettier": "^2.4.1",
+        "@types/react": "^17.0.30",
+        "@types/react-dom": "^17.0.9",
+        "@types/react-redux": "^7.1.20",
+        "@types/react-resizable": "^1.7.4",
+        "@uiw/react-md-editor": "^3.6.5",
+        "axios": "^0.23.0",
+        "esbuild-wasm": "^0.13.10",
+        "immer": "^9.0.6",
+        "localforage": "^1.10.0",
+        "monaco-editor": "^0.29.1",
+        "prettier": "^2.4.1",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
+        "react-redux": "^7.2.5",
+        "react-resizable": "^3.0.4",
+        "react-router-dom": "^6.0.1",
+        "react-scripts": "4.0.3",
+        "redux": "^4.1.1",
+        "redux-thunk": "^2.3.0",
+        "sass": "^1.43.2",
+        "sass-loader": "^12.2.0",
+        "typescript": "^4.4.4",
+        "web-vitals": "^1.1.2"
+    },
+    "scripts": {
+        "start": "craco start",
+        "build": "craco build",
+        "test": "craco test",
+        "eject": "react-scripts eject"
+    },
+    "eslintConfig": {
+        "extends": [
+            "react-app",
+            "react-app/jest"
+        ]
+    },
+    "browserslist": {
+        "production": [
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
+        ],
+        "development": [
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
+        ]
+    },
+    "devDependencies": {
+        "autoprefixer": "^9.8.8",
+        "postcss": "^7.0.39",
+        "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.17"
+    }
 }
